added the new feature in the unit testing files